Revision history for Perl module Git::PurePerl:

     - Add basic documentation for Object::Commit (Kent Fredric)
     - Add has_ancestor_sha1 method to Object::Commit (Kent Fredric)
     - Add Git::PurePerl::Util with handy current_git_dir() util (Kent Fredric)

0.50 Sat Jan 25 14:58:16 CET 2014
     - Now with the changes from 0.49 in CHANGES. That's it.

0.49 Sat Jan 25 14:55:42 CET 2014
     - qw() in list context is an error now (gregor herrmann)
     - Fixed RT#90667 (Zoffix Znet)

0.48 Thu Jul 14 22:53:55 BST 2011
     - Translation from Digest::SHA1 to Digest::SHA (Jonas Genannt)
     - A git object can also be of zero size. (Christian Walde)
     - Only the last SHA1 for any given ref is returned from
       ref_sha1() (Christian Walde)
     - Make sure zlib data is always read as-is (Christian Walde)

0.47 Wed Aug 11 13:29:06 BST 2010
     - Lazily build the fh attribute of Git::PurePerl::Pack objects.

0.46_01 Sat 16 Jan 13:42:00 GMT 2010
     - Add support for ssh:// and file:// protocols (Alex Vandiver)

0.46 Tue 12 Jan 01:09:00 GMT 2010
     - Add config file handling via Config::GitLike
     - Fix a couple of memory leaks due to unweakened circular references.
     - Handle commit object character encoding correctly

0.45 Mon 21st Dec 12:36:29 GMT 2009
     - Be Win32 compatible (RT#52677), patch contributed by kmx.

0.44 Sat 19th Dec 15:31:00 GMT
     - Fix ref_sha1 to return rather than calling next as not in a loop. (doy)
     - Add support for the special HEAD ref, and associated head and
       head_sha1 methods
     - Grok symbolic references
     - Default to the current directory in the checkout method

0.43 Wed 25 Nov 2009 19:46:38 GMT 2009
     - Switch to Module::Install so we can have repository metadata in
       META.yml
     - No other changes from the previous 0.42_01 dev release.

0.42_01 Mon Nov 23 12:12:51 GMT 2009
     - allow put_object to update other heads than just 'master'
       (thanks to martijn)